--- a/projeto-polo/App.xaml
+++ b/projeto-polo/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="projeto_polo.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:projeto_polo"
-             StartupUri="MainWindow.xaml">
+﻿<Application
+    x:Class="projeto_polo.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:projeto_polo"
+    StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Application.Resources>
 </Application>
