--- a/projeto-polo/MainWindow.xaml
+++ b/projeto-polo/MainWindow.xaml
@@ -7,9 +7,8 @@
     xmlns:local="clr-namespace:projeto_polo"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Expectativa do mercado mensal"
+    Width="780"
     Height="600"
-    MinWidth="887"
-    MaxWidth="887"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -30,36 +29,30 @@
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
 
                     <TextBlock
-                        Margin="0,0,5,0"
+                        Margin="0,0,7,0"
                         VerticalAlignment="Center"
                         Text="Indicador" />
                     <CheckBox
-                        Margin="5,0,5,0"
+                        Margin="0,0,2,0"
                         VerticalAlignment="Center"
                         IsChecked="{Binding TableFilter.ShowIPCA}" />
-                    <TextBlock
-                        Margin="0,0,5,0"
-                        VerticalAlignment="Center"
-                        Text="IPCA" />
+                    <TextBlock VerticalAlignment="Center" Text="IPCA" />
                     <CheckBox
-                        Margin="5,0,5,0"
+                        Margin="5,0,2,0"
                         VerticalAlignment="Center"
                         Checked="CheckBox_Checked"
                         IsChecked="{Binding TableFilter.ShowIGPM}" />
-                    <TextBlock
-                        Margin="0,0,5,0"
-                        VerticalAlignment="Center"
-                        Text="IGP-M" />
+                    <TextBlock VerticalAlignment="Center" Text="IGP-M" />
                     <CheckBox
-                        Margin="5,0,5,0"
+                        Margin="5,0,2,0"
                         VerticalAlignment="Center"
                         IsChecked="{Binding TableFilter.ShowSelic}" />
                     <TextBlock
-                        Margin="0,0,30,0"
+                        Margin="0,0,10,0"
                         VerticalAlignment="Center"
                         Text="Selic" />
                     <TextBlock
-                        Margin="5,0,5,0"
+                        Margin="5,0,2,0"
                         VerticalAlignment="Center"
                         Text="Período" />
                     <DatePicker
@@ -69,10 +62,7 @@
                         DisplayDateEnd="{Binding TableFilter.ToDate}"
                         SelectedDate="{Binding TableFilter.FromDate}" />
 
-                    <TextBlock
-                        Margin="5,0,5,0"
-                        VerticalAlignment="Center"
-                        Text="a" />
+                    <TextBlock VerticalAlignment="Center" Text="a" />
                     <DatePicker
                         Name="ToDate"
                         Margin="5,0,5,0"
@@ -80,27 +70,19 @@
                         DisplayDateStart="{Binding TableFilter.FromDate}"
                         SelectedDate="{Binding TableFilter.ToDate}" />
                     <Button
-                        Width="45"
+                        Width="60"
                         Height="24"
-                        Margin="15,0,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Center"
-                        BorderThickness="1,1,1,1"
-                        Command="{Binding FilterCommand}"
-                        Content="Filtrar" />
-                    <Button
-                        Width="24"
-                        Height="24"
-                        Margin="15,0,0,0"
+                        Margin="10,0,0,0"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        Command="{Binding RefreshCommand}">
-                        <Image Height="16" Source="/Resources/refresh-icon.png" />
-                    </Button>
+                        Command="{Binding RefreshCommand}"
+                        Content="Pesquisar" />
+
+
                     <Button
                         Width="80"
                         Height="24"
-                        Margin="15,0,0,0"
+                        Margin="5,0,0,0"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Command="{Binding ExportCommand}"
